# fp-8th-sem

./: README.md
Lab2/: Lab2.cabal  README.md
Lab2/app/: IntegrateParallel.hs  Main.hs  Utils.hs
