cabal-version:      2.4
name:               Lab2
version:            0.1.0.0

executable Lab2
    main-is: 
        Main.hs
    ghc-options: 
        -threaded 
        -rtsopts 
        -with-rtsopts=-N
    build-depends:    
        base ^>=4.14.3.0,
        split,
        time,
    hs-source-dirs:   
        app
    default-language: 
        Haskell2010
    other-modules: 
        IntegrateParallel 
        Utils
